--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 
       .grid_box {
         position: absolute;
-        top: 100px;
+        top: 75px;
         grid-auto-columns: 80px;
         grid-auto-rows: auto;
         display: grid;
       }
 
-      .rowThing {
-
-      }
-
       .room {
+        margin: 5px;
         border:1px solid green;
         padding:5px;
         z-index: -1;
       }
       .reservation {
+        position: relative;
+        margin: 5px;
         height: 30px;
         border:1px solid blue;
         padding:5px;
@@ -37,7 +36,6 @@
       }
 
       .num {
-        height: 150px;
         margin-right: 20px;
         text-align: right;
         padding-right: 2px;
@@ -103,7 +101,10 @@
       </div>
     </nav>
 
-    <div class="grid_box"></div>
+    <div class="grid_box">
+      <div class="num" style="grid-column: 1; grid-row: 1">Room #</div>
+    </div>
+
 
 
     <!-- Optional JavaScript -->
@@ -151,7 +152,8 @@
         {"Person_ID":102983, "Person_Name":"%$#^", "Room_ID":1645, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-05-27", "Reservation_End":"2019-07-15"},
         {"Person_ID":109348, "Person_Name":"^%$#", "Room_ID":1646, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-06-02", "Reservation_End":"2019-07-12"},
         {"Person_ID":234985, "Person_Name":"Bob Ross", "Room_ID":1647, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-06-02", "Reservation_End":"2019-07-12"},
-        {"Person_ID":487516, "Person_Name":"Bob Ross", "Room_ID":1648, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-06-02", "Reservation_End":"2019-07-12"}
+        {"Person_ID":487516, "Person_Name":"Bob Ross", "Room_ID":1648, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-06-02", "Reservation_End":"2019-07-12"},
+        {"Person_ID":487511, "Person_Name":"Rob Boss", "Room_ID":1648, "Reservation_Color":"#ff00ff", "Reservation_Start":"2019-06-02", "Reservation_End":"2019-08-01"}
       ];
 
       $(function() {
@@ -162,12 +164,10 @@
         $.each(rooms, function(idx, obj) {
           var gridIndex = idx + 2;
           var nextIndex = gridIndex + 1;
-          var rowDiv = $('<div class="rowThing" id="row' + obj.Room_ID + '" style="grid-column: 2; grid-row:' + gridIndex + ' / ' + nextIndex + ';"></div>')
-          $(".grid_box").append(rowDiv);
-          var numDiv = $('<div class="num" id="' + obj.Room_ID + '" style="grid-column:1; grid-row:' + gridIndex + ' / ' + nextIndex + ';">'+obj.Room_Number+'</div>');
+          var numDiv = $('<div class="num" id="' + obj.Room_ID + '" style="grid-column: 1; grid-row: ' + gridIndex + ' / ' + nextIndex + ';">' + obj.Room_Number + '</div>');
           $(".grid_box").append(numDiv);
-          var roomDiv = $('<div class="room" id="room'+obj.Room_ID+'"></div>');
-          rowDiv.append(roomDiv);
+          var roomDiv = $('<div class="room" id="room' + obj.Room_ID + '" style="grid-column: 2; grid-row: ' + gridIndex + ' / ' + nextIndex + ';"></div>');
+          $(".grid_box").append(roomDiv);
           //$("#"+obj.Room_ID).css("top", $("#room"+obj.Room_ID).position().top);
           //$("#"+obj.Room_ID).position().top(10 * idx);
         });
@@ -191,28 +191,9 @@
           if(endDate > greatestDate) {
             greatestDate = endDate;
           }
-          var resDiv = $('<div class="reservation" id="res'+obj.Person_ID+'">'+obj.Person_Name+'</div>');
+          var resDiv = $('<div class="reservation" id="res'+obj.Person_ID+'" style="grid-column: 3;">' + obj.Person_Name + '</div>');
           $("#room" + obj.Room_ID).append(resDiv);
         });
-
-        /**
-          Adjusts the location of rooms based on the number
-          of people in them
-        **/
-        $.each(rooms, function(idx, obj) {
-          var room = $("#room" + obj.Room_ID);
-          /*
-          if(idx === 0) {
-            room.css("top", 100);
-          } else {
-            room.css("top", prevRoom.position().top + (30 * prevChildCount) + 50 + "px");
-          }
-          prevRoom = room;
-          prevChildCount = room.children('div').length;
-          $("#"+obj.Room_ID).css("top", room.position().top + 15 + "px");
-          */
-        });
-
 
         // Converts the oldest/youngest dates into an Array
         // of every day in between them
@@ -236,23 +217,31 @@
           $(".grid_box").append(dateDiv);
         });
 
-        console.log(dates.length);
+        $.each(reservations, function(idx, obj) {
+          // Shifts reservation location to its time interval location
+          var resBar = $("#res" + obj.Person_ID);
+          var startCol = $("#" + obj.Reservation_Start).css("grid-column");
+          var endCol = $("#" + obj.Reservation_End).css("grid-column");
+          resBar.css("grid-column", startCol + " / " + endCol);
+        });
+
         var lastColumn = dates.length + 2;
-        $(".rowThing").css("grid-column", '2 / ' + lastColumn + '');
+        // Ends room rows at the last reservation date
+        $(".room").css("grid-column", '2 / ' + lastColumn + '');
 
         /**
           Takes every reservation div and shifts/morphs it to
           fit in the res' time parameters
         **/
-        /*
         $.each(reservations, function(idx, obj) {
-          var resBar = $("#res"+obj.Person_ID);
-          var startLocation = $("#"+obj.Reservation_Start).offset().left - 60;
-          resBar.css("left", startLocation + "px");
-          var width = $("#"+obj.Reservation_End).offset().left - startLocation;
+          var resBar = $("#res" + obj.Person_ID);
+          var startLocation = $("#" + obj.Reservation_Start).offset().left;
+          var adjust = startLocation - 115;
+          resBar.css("left", adjust + "px");
+          var width = $("#"+obj.Reservation_End).offset().left - startLocation + 55;
           resBar.css("width", width + "px");
         });
-        */
+
 
 
         /**
@@ -261,14 +250,16 @@
         **/
         $(window).scroll(function() {
           $(".firstDays").each(function(idx, obj) {
+            var found = false;
             var currentDay = $(obj);
             var date = currentDay.attr("id");
-            if($(window).scrollLeft() > currentDay.offset().left) {
-              $("#month").text(moment(date).format("MMMM"));
-              $("#year").text(moment(date).subtract(1, "month").format("YYYY"));
-            } else if($(window).scrollLeft() < $($(".firstDays").get(0)).offset().left) {
+            if($(window).scrollLeft() < $($(".firstDays").get(0)).offset().left) {
               $("#month").text(moment(dates[0]).format("MMMM"));
-              $("#year").text(moment(dates[0]).subtract(1, "month").format("YYYY"));
+              $("#year").text(moment(dates[0]).format("YYYY"));
+            } else if($(window).scrollLeft() > currentDay.offset().left) {
+              $("#month").text(moment(date).format("MMMM"));
+              $("#year").text(moment(date).format("YYYY"));
+              found = true;
             }
           });
         });
@@ -280,15 +271,12 @@
         function hideRooms(dormID) {
           //location.reload();
           $.each(rooms, function(idx, obj) {
-            var row = $("#row" + obj.Room_ID);
             var room = $("#room" + obj.Room_ID);
             var roomNum = $("#" + obj.Room_ID);
             if(obj.Building_ID != dormID) {
-              row.hide();
               room.hide();
               roomNum.hide();
             } else {
-              row.show();
               room.show();
               roomNum.show();
             }
