Fixed spacing problem!

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         grid-auto-columns: 80px;
         margin: 5px;
         border:1px solid green;
-        padding-right: 5px;
-        padding-top: 5px;
-        padding-bottom: 5px;
+        padding: 5px;
         z-index: -1;
       }
       .reservation {
